--- a/src/app/Pages/components/add-vendor/add-vendor.component.css
+++ b/src/app/Pages/components/add-vendor/add-vendor.component.css
@@ -1,33 +1,3 @@
-.modal {
-  position: absolute;
-  inset: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  /* backdrop-filter: blur(3px); */
-  /* opacity: 1; */
-  z-index: 5;
-}
-.section {
-  width: 70%;
-
-  background-color: white;
-  padding: 5px;
-  border-radius: 5px;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-  z-index: 10;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
-}
-
 .form-container {
   max-width: 900px;
   margin: 50px auto;
@@ -67,7 +37,7 @@ input {
   justify-content: flex-end;
   margin-top: 20px;
 }
-.submit-btn {
+button {
   padding: 10px;
   background-color: #499de2;
   color: white;
@@ -77,13 +47,6 @@ input {
   margin-top: 10px;
   width: 200px;
 }
-.submit-btn:hover {
+button:hover {
   background-color: #035996;
-}
-
-.close-modal {
-  border: none;
-  padding: 2px 5px;
-  border-radius: 50%;
-  cursor: pointer;
 }
