--- a/src/app/Pages/view-vendor/view-vendor.component.html
+++ b/src/app/Pages/view-vendor/view-vendor.component.html
@@ -1,7 +1,7 @@
 <div class="modal">
   <div class="section">
     <div class="header">
-      <h1>View Product</h1>
+      <h1>View Vendor</h1>
       <button class="close-modal" (click)="closeButton.emit(false)">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -17,22 +17,40 @@
       </button>
     </div>
     <div class="form-container">
-      <h2>Edit Product</h2>
+      <h2>Edit Vendor</h2>
 
-      <form [formGroup]="updateProductForm" (ngSubmit)="onsubmit()">
+      <form [formGroup]="updateVendorForm" (ngSubmit)="onsubmit()">
         <div class="form-row">
           <div class="form-group">
             <label for="name">Name:</label>
+            <input type="text" id="name" formControlName="name" required />
+          </div>
+          <div class="form-group">
+            <label for="company">Company:</label>
             <input
               type="text"
-              id="name"
-              formControlName="productName"
+              id="company"
+              formControlName="company"
               required
             />
           </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" formControlName="email" required />
+          </div>
 
           <div class="form-group">
-            <label for="category">Category:</label>
+            <label for="phone">Phone:</label>
+            <input type="number" id="phone" formControlName="phone" required />
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label for="category"> Category:</label>
             <input
               type="text"
               id="category"
@@ -40,37 +58,13 @@
               required
             />
           </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group">
-            <label for="price">Price:</label>
-            <input type="number" id="price" formControlName="price" required />
-          </div>
 
           <div class="form-group">
-            <label for="stock">Stock:</label>
-            <input type="number" id="stock" formControlName="stock" required />
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group">
-            <label for="productCode">Product Code:</label>
+            <label for="address">Address:</label>
             <input
-              type="text"
-              id="productCode"
-              formControlName="productCode"
-              required
-            />
-          </div>
-
-          <div class="form-group">
-            <label for="rating">Rating:</label>
-            <input
-              type="number"
-              id="rating"
-              formControlName="rating"
+              type="string"
+              id="address"
+              formControlName="address"
               required
             />
           </div>
@@ -78,11 +72,23 @@
 
         <div class="form-row">
           <div class="form-group">
-            <label for="supplier">Supplier:</label>
+            <label for="city"> City:</label>
+            <input type="text" id="city" formControlName="city" required />
+          </div>
+
+          <div class="form-group">
+            <label for="state">State:</label>
+            <input type="string" id="state" formControlName="state" required />
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label for="country"> Country:</label>
             <input
               type="text"
-              id="supplier"
-              formControlName="supplier"
+              id="country"
+              formControlName="country"
               required
             />
           </div>
