--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -35,3 +35,9 @@
   background-color: #6f97c4;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.7);
 }
+
+.active {
+  background-color: #6f97c4;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.7);
+  font-weight: 800;
+}
