--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <a [routerLink]="['/home']" routerLinkActive="active">Home</a>
     </li>
     <li>
-      <a [routerLink]="['/marketing/new']" routerLinkActive="active"
+      <a [routerLink]="['/customer']" routerLinkActive="active"
         >Marketing Calls</a
       >
     </li>
