--- a/src/app/Pages/components/add-product/add-product.component.css
+++ b/src/app/Pages/components/add-product/add-product.component.css
@@ -31,6 +31,7 @@ input {
   padding: 10px;
   border: 1px solid #d1c5c5;
   border-radius: 6px;
+  width: 400px;
 }
 .form-actions {
   display: flex;
