--- a/src/app/Pages/components/products/products.component.html
+++ b/src/app/Pages/components/products/products.component.html
@@ -24,67 +24,67 @@
   <table class="product-table" role="table" aria-label="Product list">
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Name</th>
+        <th>Product ID</th>
+        <th>Product Code</th>
+        <th>Product Name</th>
         <th>Category</th>
         <th>Price</th>
-        <th>Stock</th>
-        <th>Product Code</th>
-        <th>Rating</th>
-        <th>Supplier</th>
         <th>Actions</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let p of products; index as i">
-        <td>{{ i + 1 }}</td>
-        <td>{{ p.productName }}</td>
-        <td>{{ p.category }}</td>
-        <td class="price">{{ formatINR(p.price) }}</td>
-        <td [class.low-stock]="p.stock <= 10">{{ p.stock }}</td>
-
-        <td>{{ p.productCode }}</td>
-        <td>
-          <span class="rating">{{ p.rating.toFixed(1) }}</span>
-        </td>
-
-        <td>{{ p.supplier }}</td>
-        <td>
-          <span (click)="openViewProduct(p)">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M3 17.46v3.04c0 .28.22.5.5.5h3.04c.13 0 .26-.05.35-.15L17.81 9.94l-3.75-3.75L3.15 17.1q-.15.15-.15.36M20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83l3.75 3.75z"
-              />
-            </svg>
-          </span>
-          <span (click)="deleteProduct(p.id)">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2zM18 4h-2.5l-.71-.71c-.18-.18-.44-.29-.7-.29H9.91c-.26 0-.52.11-.7.29L8.5 4H6c-.55 0-1 .45-1 1s.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1"
-              />
-            </svg>
-          </span>
-        </td>
-      </tr>
+      <ng-container *ngIf="products.length > 0; else noRecords">
+        <tr *ngFor="let p of products; index as i">
+          <td>{{ i + 1 }}</td>
+          <td>{{ p.productcode }}</td>
+          <td>{{ p.productName }}</td>
+          <td>{{ p.category }}</td>
+          <td class="price">{{ p.productPrice }}</td>
+          <td>
+            <span (click)="openViewProduct(p.productId)">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="currentColor"
+                  d="M3 17.46v3.04c0 .28.22.5.5.5h3.04c.13 0 .26-.05.35-.15L17.81 9.94l-3.75-3.75L3.15 17.1q-.15.15-.15.36M20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83l3.75 3.75z"
+                />
+              </svg>
+            </span>
+            <span (click)="deleteProduct(p.productId)">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="currentColor"
+                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2zM18 4h-2.5l-.71-.71c-.18-.18-.44-.29-.7-.29H9.91c-.26 0-.52.11-.7.29L8.5 4H6c-.55 0-1 .45-1 1s.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1"
+                />
+              </svg>
+            </span>
+          </td>
+        </tr>
+      </ng-container>
+      <ng-template #noRecords>
+        <tr>
+          <td colspan="100%">No Records Found</td>
+        </tr>
+      </ng-template>
     </tbody>
   </table>
 </div>
+<ng-container *ngIf="isToast">
+  <app-toast [message]="toastMessage" [show]="isToast"></app-toast>
+</ng-container>
 
 <div *ngIf="viewProduct">
   <app-view-product
-    [product]="singleProduct"
+    [productId]="productId"
     (closeButton)="onCloseButton($event)"
   ></app-view-product>
 </div>
