--- a/src/app/Pages/components/view-markeing-calls/view-markeing-calls.component.css
+++ b/src/app/Pages/components/view-markeing-calls/view-markeing-calls.component.css
@@ -7,40 +7,38 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  /* backdrop-filter: blur(3px); */
-  /* opacity: 1; */
   z-index: 5;
 }
 .section {
-  width: 70%;
+  width: 65%;
 
   background-color: white;
-  padding: 5px;
+  padding: 2px;
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
+  margin-top: 70px;
 }
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0px 25px;
 }
 
 .form-container {
   max-width: 900px;
-  margin: 50px auto;
+  margin: 0px auto;
   background: rgb(150, 181, 238);
-  padding: 20px;
+  padding: 3px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.479);
   font-family: Arial, sans-serif;
 }
 
-h2 {
+h3 {
   text-align: center;
-  margin-bottom: 20px;
 }
 .form-row {
   display: flex;
@@ -57,11 +55,11 @@ label {
   margin-bottom: 5px;
   font-weight: bold;
 }
-input {
+input,
+select {
   padding: 10px;
   border: 1px solid #d1c5c5;
   border-radius: 6px;
-  width: 400px;
 }
 .form-actions {
   display: flex;
