--- a/src/app/Pages/components/view-product/view-product.component.html
+++ b/src/app/Pages/components/view-product/view-product.component.html
@@ -22,7 +22,7 @@
       <form [formGroup]="updateProductForm" (ngSubmit)="onsubmit()">
         <div class="form-row">
           <div class="form-group">
-            <label for="name">Name:</label>
+            <label for="name">Product Name:</label>
             <input
               type="text"
               id="name"
@@ -45,44 +45,10 @@
         <div class="form-row">
           <div class="form-group">
             <label for="price">Price:</label>
-            <input type="number" id="price" formControlName="price" required />
-          </div>
-
-          <div class="form-group">
-            <label for="stock">Stock:</label>
-            <input type="number" id="stock" formControlName="stock" required />
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group">
-            <label for="productCode">Product Code:</label>
-            <input
-              type="text"
-              id="productCode"
-              formControlName="productCode"
-              required
-            />
-          </div>
-
-          <div class="form-group">
-            <label for="rating">Rating:</label>
             <input
               type="number"
-              id="rating"
-              formControlName="rating"
-              required
-            />
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group">
-            <label for="supplier">Supplier:</label>
-            <input
-              type="text"
-              id="supplier"
-              formControlName="supplier"
+              id="price"
+              formControlName="productPrice"
               required
             />
           </div>
@@ -90,10 +56,13 @@
 
         <div class="form-actions">
           <button type="submit" class="submit-btn">
-            <strong>Submit</strong>
+            <strong>Update</strong>
           </button>
         </div>
       </form>
     </div>
   </div>
 </div>
+<ng-container *ngIf="isToast" class="toast-style">
+  <app-toast [message]="toastMessage" [show]="isToast"></app-toast>
+</ng-container>
